fix(look&feel,apollo): adjust alignment for horizontal CardRadioOption

--- a/client/apollo/css/src/Form/Radio/CardRadioOption/CardRadioOptionCommon.scss
+++ b/client/apollo/css/src/Form/Radio/CardRadioOption/CardRadioOptionCommon.scss
@@ -68,6 +68,10 @@
   &--horizontal {
     flex-direction: row;
 
+    & .af-card-radio-option__content {
+      align-items: flex-start;
+    }
+
     & .af-radio {
       order: -1;
     }
